testdata/good/before/7.insert-without-use.tw
<h1>Some title is here</h1>
<p>Some content is here</p>

@insert("title", "Home page")

@insert("content")
<h1>Home page</h1>
<p>Some content</p>
@end