testdata/bad/duplicate-inserts/index.tw
@use('layout')

@insert('title', 'Some title')
@insert('title', 'Another title')

@insert('content')
<h1>Some title is here</h1>
@end